--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ mcp>=1.0.0
 imapclient>=3.0.0
 email-reply-parser>=0.5.12
 anthropic>=0.72.0
+google-auth-oauthlib>=1.2.0
+google-auth-httplib2>=0.2.0
+google-api-python-client>=2.108.0
